// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`testing ExpenseSumary for 0 total 0 count 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h1
      className="page-header__title"
    >
      viewing 
      <span>
        0
      </span>
       expenses totalling 
      <span>
        $0.00
      </span>
    </h1>
    <div
      className="page-header__actions"
    >
      <Link
        className="button"
        to="/create"
      >
        add Expense
      </Link>
    </div>
  </div>
</div>
`;

exports[`testing ExpenseSumary for 23 total 2357876 count 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h1
      className="page-header__title"
    >
      viewing 
      <span>
        2357876
      </span>
       expenses totalling 
      <span>
        $0.23
      </span>
    </h1>
    <div
      className="page-header__actions"
    >
      <Link
        className="button"
        to="/create"
      >
        add Expense
      </Link>
    </div>
  </div>
</div>
`;
